--- a/trunk/root/adm/style/acp_proxy_revealer_plugin.html
+++ b/trunk/root/adm/style/acp_proxy_revealer_plugin.html
@@ -10,13 +10,13 @@
 		<th><span>{L_USER_AGENT}</span></th>
 	</tr>
 	<tr>
-		<td class="row3" nowrap="nowrap"><span>{USER_AGENT}</span></td>
+		<td class="row3"><span>{USER_AGENT}</span></td>
 	</tr>
 	<tr> 
 		<th><span>{L_PLUGIN_VERSION}</span></th>
 	</tr>
 	<tr>
-		<td class="row3" nowrap="nowrap"><span>{PLUGIN_VERSION}</span></td>
+		<td class="row3"><span>{PLUGIN_VERSION}</span></td>
 	</tr>
 </table>
 
