Installer wrap-ups. Follow-up work on r104: ACP code review and finish-up display of duplicate IP/method log entries with different browser/plugin info, and minor aesthetic tweaks. Quicktime: add forgotten user_agent tagging to probe url for proper loggin of extended plugin info.

--- a/root/adm/style/acp_proxy_revealer_plugin.html
+++ b/root/adm/style/acp_proxy_revealer_plugin.html
@@ -10,13 +10,13 @@
 		<th><span>{L_USER_AGENT}</span></th>
 	</tr>
 	<tr>
-		<td class="row3" nowrap="nowrap"><span>{USER_AGENT}</span></td>
+		<td class="row3"><span>{USER_AGENT}</span></td>
 	</tr>
 	<tr> 
 		<th><span>{L_PLUGIN_VERSION}</span></th>
 	</tr>
 	<tr>
-		<td class="row3" nowrap="nowrap"><span>{PLUGIN_VERSION}</span></td>
+		<td class="row3"><span>{PLUGIN_VERSION}</span></td>
 	</tr>
 </table>
 
